[package]
name = "async-dpdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dpdk-sys = "0.1"
lazy_static = "1.4"
libc = "0.2"
thiserror = "1.0"

[patch.crates-io]
dpdk-sys = { path = "../dpdk-sys" }
